--- a/src/main/resources/templates/allRects.html
+++ b/src/main/resources/templates/allRects.html
@@ -4,10 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rectangles</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
-    <main class="container-fluid">
-        <h1>test</h1>
-    </main>
+    <div class="container-fluid">
+        <div class="row justify-content-center">
+			<div class="col-md-4">
+				<h1 class="text-center mt-5 mb-4">Rectangles</h1>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>Name</th>
+                            <th>Color</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody th:each="rect, iRect:${rects}">
+                        <tr>
+                            <td th:text="${iRect.index+1}"></td>
+                            <td th:text="${rect.name}"></td>
+                            <td th:text="${rect.color}"></td>
+                            <td>Delete</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <div class="d-grid gap-2">
+                    <a class="btn btn-primary" href="addRect.html" role="button">Add Rectangle</a>
+                </div>  
+            </div>
+        </div>
+    </div>
 </body>
 </html>
