--- a/src/main/resources/templates/editRect.html
+++ b/src/main/resources/templates/editRect.html
@@ -7,6 +7,30 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
-    
+    <div class="container-fluid">
+		<div class="row justify-content-center">
+			<div class="col-md-8">
+				<h1 class="text-center mt-5 mb-4">Edit Rectangle</h1>
+				<form th:action="@{/rectangles/edit/{id}(id=${rect.uid})}" method="post">
+                    <table class="table">
+                        <tbody>
+                            <tr>
+                                <td class="col-2"><input type="text" id="name" name="name" class="form-control form-control-lg" placeholder="Name" th:value="${rect.name}"></td>
+                                <td class="col-2"><input type="number" id="width" name="width" class="form-control form-control-lg" placeholder="Width" th:value="${rect.width}"></td>
+                                <td class="col-2"><input type="number" id="height" name="height" class="form-control form-control-lg" placeholder="Height" th:value="${rect.height}"></td>
+                                <td class="col-2"><input type="color" id="color" name="color"   class="w-100 form-control form-control-color" style="height:50px" th:value="${rect.color}"></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <div class="d-grid mt-3">
+                        <input class="btn btn-primary" type="submit" value="Edit"></input>
+                    </div> 
+				</form>
+                <div class="d-grid mt-3">
+                    <a class="btn btn-primary" href="/rectangles" role="button">Main Page</a>
+                </div>  
+			</div>
+		</div>  
+	</div>
 </body>
 </html>
