--- a/src/main/resources/templates/editRect.html
+++ b/src/main/resources/templates/editRect.html
@@ -3,16 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Rectangle</title>
+    <title>Display Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
-<body>
+<body class="bg-body-secondary">
     <div class="container-fluid">
 		<div class="row justify-content-center">
 			<div class="col-md-8">
-				<h1 class="text-center mt-5 mb-4">Edit Rectangle</h1>
-				<form th:action="@{/rectangles/edit/{id}(id=${rect.uid})}" method="post">
+				<h1 class="text-center mt-5 mb-4" th:text="${rect.name}+' Information'"></h1>
+				<form th:action="@{/rectangles/edit/{id}(id=${rect.uid})}" th:method="post">
                     <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Width</th>
+                                <th>Height</th>
+                                <th>Color</th>
+                            </tr>
+                        </thead>
                         <tbody>
                             <tr>
                                 <td class="col-2"><input type="text" id="name" name="name" class="form-control form-control-lg" placeholder="Name" th:value="${rect.name}"></td>
@@ -28,9 +36,12 @@
 				</form>
                 <div class="d-grid mt-3">
                     <a class="btn btn-primary" href="/rectangles" role="button">Main Page</a>
-                </div>  
-			</div>
+                </div>
+            </div>
 		</div>  
 	</div>
+    <div th:text="${rect.name}" class="mt-3 row justify-content-center" ></div>
+    <div th:style="'width:'+${rect.width}+'px;height:'+${rect.height}+'px;background-color:'+${rect.color}" class="m-auto"></div></div>
+    
 </body>
 </html>
